syntax = "proto3";

package api;

service IstioCopilot {
  rpc Health(HealthRequest) returns (HealthResponse) {}
  rpc Routes(RoutesRequest) returns (RoutesResponse) {}
}

message HealthRequest {
}
message HealthResponse {
  bool healthy = 1;
}

message RoutesRequest {
}

message RoutesResponse {
  // key is hostname
  map<string, BackendSet> backends = 1;
}

message BackendSet {
  repeated Backend backends = 1;
}

message Backend {
  string address = 1;
  uint32 port = 2;
}
